# motor-vibration-data-mining

./: .gitignore  README.md  pyproject.toml
motorvibration/config/: .env
motorvibration/humanAttempt/: motor_cluster.ipynb  phase3.ipynb
motorvibration/humanAttempt/dataProcessing/: dataLoader.py  featureEngineering.py
motorvibration/humanAttempt/modeling/: Model copy.py  Model.py
motorvibration/llmAttempt/: pahse2.py  phase2.ipynb
